Added gPRC microservices demo